// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentsCount> DOM element renders correctly with color, size and commentsCount 1`] = `
<div>
  <span
    className="htz-a htz-b htz-c"
  >
    <div
      className="htz-d htz-e htz-f"
    >
      32
    </div>
    <svg
      className="htz-g htz-f htz-h"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
    >
        
      <path
        d="M233 170h-50v46.3L121.6 170H24V40h209v130z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`<CommentsCount> DOM element renders correctly with color, size and commentsCount 2`] = `".htz-a{display:-webkit-inline-box;display:-moz-inline-box;display:-ms-inline-flexbox;display:-webkit-inline-flex;display:inline-flex}.htz-b{align-items:center}.htz-c{-webkit-box-align:center}.htz-d{font-weight:bold}.htz-e{padding-left:0.5rem}.htz-f{color:#289DD3}.htz-g{vertical-align:-0.15em}.htz-h{fill:#FFF}"`;

exports[`<CommentsCount> DOM element renders correctly with minimal required props 1`] = `<div />`;

exports[`<CommentsCount> DOM element renders correctly with minimal required props 2`] = `""`;

exports[`<CommentsCount> DOM element renders correctly with miscStyles 1`] = `
<div>
  <span
    className="htz-a htz-b htz-c htz-d"
  >
    <div
      className="htz-e htz-f htz-g htz-h"
    >
      12
    </div>
    <svg
      className="htz-i htz-g htz-j"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
    >
        
      <path
        d="M233 170h-50v46.3L121.6 170H24V40h209v130z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`<CommentsCount> DOM element renders correctly with miscStyles 2`] = `".htz-a{display:block}.htz-b{align-items:center}.htz-c{margin-left:5rem}.htz-d{-webkit-box-align:center}.htz-e{font-weight:bold}.htz-f{padding-left:0.5rem}.htz-g{color:#A39308}.htz-h{padding-right:0.2rem}.htz-i{vertical-align:-0.15em}.htz-j{fill:#FFF}"`;

exports[`<CommentsCount> DOM element should render nothing when commentsCount is smaller than minCount 1`] = `<div />`;
